@@ -6,7 +6,7 @@
 	# See the README and LICENSE files for details
 
 	# --------------------------------------------------------
-	# $Id: obsolete.php,v 1.8 2003-01-03 03:24:25 jfitzell Exp $
+	# $Id: obsolete.php,v 1.9 2003-01-12 07:13:44 jfitzell Exp $
 	# --------------------------------------------------------
 	
 	###########################################################################
@@ -33,4 +33,8 @@
 	config_obsolete( 'view_bug_inc', 'bug_view_inc' );
 	config_obsolete( 'ldap_organisation', 'ldap_organization' );
 	config_obsolete( 'summary_product_colon_category', 'summary_category_include_project' );
+
+	config_obsolete( 'allow_href_tags', 'html_make_links' );
+	config_obsolete( 'allow_html_tags', 'html_valid_tags' );
+	config_obsolete( 'html_tags', 'html_valid_tags' );
 ?>
