@@ -139,6 +139,11 @@ Mantis ChangeLog
  * New config option (bug_resolved_status_threshold): To mark the status threshold for marking bugs as readonly.  Default is RESOLVED.
  * Fix: deleting the current project no longer gives an error (#2808)
  * Fix: email address validation should be much more RFC 822 compliant (#2819)
+ * Removed config option (allow_href_tags): see new option html_make_links
+ * Removed config option (allow_html_tags): see new option html_valid_tags
+ * Removed config option (html_tags): see new option html_valid_tags
+ * New config option (html_make_links): Replaces allow_href_tags. When true, convert text links in strings into actual anchor tags.
+ * New config option (html_valid_tags): Replaces allow_html_tags and html_tags.  Set it to a string containing a comma-separated list of tag names that should be allowed in messages.
 
 2002.08.23  -  0.17.5
  * Corrected bug_delete.php and bug_delete_page.php, which ignored the $g_allow_bug_delete_access_level setting.
